tests/spec/emit/snapshots/propagate_chained.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn first() -> Result<int, string> {
    Ok(10)
  }
  
  fn second() -> Result<int, string> {
    Ok(20)
  }
  
  fn test() -> Result<int, string> {
    let x = first()?;
    let y = second()?;
    Ok(x + y)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func first() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](10)
}

func second() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](20)
}

func test() lisette.Result[int, string] {
	check := first()
	if check.Tag != lisette.ResultOk {
		return check
	}
	x := check.OkVal
	check_1 := second()
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	y := check_1.OkVal
	return lisette.MakeResultOk[int, string](x + y)
}
