tests/spec/emit/snapshots/propagate_chained_double.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn h() -> Result<Result<int, string>, string> { Ok(Ok(1)) }
  
  fn f() -> Result<int, string> {
    Ok(h()??)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func h() lisette.Result[lisette.Result[int, string], string] {
	return lisette.MakeResultOk[lisette.Result[int, string], string](lisette.MakeResultOk[int, string](1))
}

func f() lisette.Result[int, string] {
	check_1 := h()
	if check_1.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[int, string](check_1.ErrVal)
	}
	check_2 := check_1.OkVal
	if check_2.Tag != lisette.ResultOk {
		return check_2
	}
	return lisette.MakeResultOk[int, string](check_2.OkVal)
}
