tests/spec/emit/snapshots/propagate_direct_err_lowered_bare_error.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  
  fn fail_unit() -> Result<(), error> {
    Err(errors.New("boom"))?
    Ok(())
  }
  
  fn main() {
    let _ = fail_unit()
  }
---
package main

import "errors"

func failUnit() error {
	return errors.New("boom")
}

func main() {
	failUnit()
}
