tests/spec/emit/snapshots/propagate_direct_err_lowered_result_tuple.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  
  fn fail() -> Result<int, error> {
    Err(errors.New("boom"))?
    Ok(1)
  }
  
  fn main() {
    let _ = fail()
  }
---
package main

import "errors"

func fail() (int, error) {
	return *new(int), errors.New("boom")
}

func main() {
	fail()
}
