tests/spec/emit/snapshots/propagate_direct_none_lowered_option_comma_ok.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn missing() -> Option<int> {
    None?
    Some(1)
  }
  
  fn main() {
    let _ = missing()
  }
---
package main

func missing() (int, bool) {
	return 0, false
}

func main() {
	missing()
}
