tests/spec/emit/snapshots/propagate_go_pointer_result_returns_value_fuses.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:os"
  
  fn open(path: string) -> Result<Ref<os.File>, error> {
    let file = os.Open(path)?
    Ok(file)
  }
---
package main

import (
	"errors"
	"os"
)

func open(path string) (*os.File, error) {
	file, err := os.Open(path)
	if err != nil {
		return nil, err
	}
	if file == nil {
		return nil, errors.New("unexpected nil")
	}
	return file, nil
}
