tests/spec/emit/snapshots/propagate_in_a_try_block_of_the_same_type_returns_the_checked_value.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn risky(n: int) -> Result<int, string> {
    if n > 0 { Ok(n) } else { Err("bad") }
  }
  
  fn main() {
    let total = try {
      let a = risky(1)?
      let b = risky(2)?
      a + b
    }
    let _ = total
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func risky(n int) lisette.Result[int, string] {
	if n > 0 {
		return lisette.MakeResultOk[int, string](n)
	}
	return lisette.MakeResultErr[int, string]("bad")
}

func main() {
	total := func() lisette.Result[int, string] {
		check := risky(1)
		if check.Tag != lisette.ResultOk {
			return check
		}
		a := check.OkVal
		check_1 := risky(2)
		if check_1.Tag != lisette.ResultOk {
			return check_1
		}
		b := check_1.OkVal
		return lisette.MakeResultOk[int, string](a + b)
	}()
	_ = total
}
