tests/spec/emit/snapshots/propagate_in_expression.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn get_value() -> Result<int, string> {
      Ok(100)
  }
  
  fn test() -> Result<int, string> {
      Ok(get_value()?
   + 10)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getValue() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](100)
}

func test() lisette.Result[int, string] {
	check_1 := getValue()
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	return lisette.MakeResultOk[int, string](check_1.OkVal + 10)
}
